# tgmm

./: README.md  TGMM.dot  gdb_dubug_skill.txt  gmon.out  gprofresult.txt  nohup.out  run_ProcessStack.sh  run_ProcessStack.sh.bak  run_TGMM_0806.sh  run_TGMM_0806.sh.bak
nmeth.3036-S2/: LICENSE.txt  README.txt
nmeth.3036-S2/src/: CMakeLists.txt  GaussianMixtureModel.cpp  GaussianMixtureModel.h  backgroundDetectionInterface.cpp  backgroundDetectionInterface.h  cellDivision.cpp  cellDivision.h  constants.cpp  constants.h  hierarchicalSpatioTemporalLPtracking.cpp  kdtree.cpp  kdtree.h  mainTrackingGaussianMixtureModel.cpp  responsibilities.cpp  responsibilities.h  supportFunctionsMain.cpp  supportFunctionsMain.h  tags  variationalInference.cpp  variationalInference.h
nmeth.3036-S2/src/Cmake/: FindCPLEX.cmake
nmeth.3036-S2/src/Utils/: CMakeLists.txt  CSparse.c  CSparse.h  GammaCDF.cpp  GammaCDF.h  MultinormalCDF.cpp  MultinormalCDF.h  WishartCDF.cpp  WishartCDF.h  parseConfigFile.cpp  parseConfigFile.h
nmeth.3036-S2/src/UtilsCUDA/: CMakeLists.txt  GMEMcommonCUDA.h  GMEMupdateCUDA  GMEMupdateCUDA.cu  GMEMupdateCUDA.h  knnCuda.cu  knnCuda.h  knnCudaCppEmul.cpp  testKnnResults.cpp  testKnnResults.h
nmeth.3036-S2/src/UtilsCUDA/3DEllipticalHaarFeatures/: AnnotationEllipsoid.cpp  AnnotationEllipsoid.h  CMakeLists.txt  EllipticalHaarFeatures.cpp  EllipticalHaarFeatures.cu  EllipticalHaarFeatures.h  mainCellDivisionClassifier.cpp  mainTest.cpp
nmeth.3036-S2/src/UtilsCUDA/3DEllipticalHaarFeatures/gentleBoost/: CMakeLists.txt  gentleBoost.cpp  gentleBoost.h  incrementalQuantiles.cpp  incrementalQuantiles.h  mainTrainSet.cxx
nmeth.3036-S2/src/UtilsCUDA/3DEllipticalHaarFeatures/mylib/: Makefile  array.h  cdf.h  draw.h  fct.min.h  fft.h  filters.h  hash.h  image.p  linear.algebra.h  mylib.h  paths.h  region.p  swc.h  water.shed.h
nmeth.3036-S2/src/UtilsCUDA/3DEllipticalHaarFeatures/mylib/DOCUMENTS/: BUILDME
nmeth.3036-S2/src/UtilsCUDA/3DEllipticalHaarFeatures/mylib/MY_TIFF/: Makefile  tiff.image.h
nmeth.3036-S2/src/backgroundDetection/: CMakeLists.txt  backgroundClassifier.cpp  backgroundClassifier.h
nmeth.3036-S2/src/doc/: TrainBackgroundClassifier.txt
nmeth.3036-S2/src/filesToCopyToExeFolder/: classifierBackgroundTracks.txt  classifierCellDivision.txt
nmeth.3036-S2/src/mylib/: connectivity.h  connectivity.p  filters.h  image.h  image.p  level.set.h  region.h  svg.h  utilities.h  water.shed.p
nmeth.3036-S2/src/mylib/MY_FFT/: CMakeLists_amatf.txt  Makefile  fft.D.c  fft.D.h
nmeth.3036-S2/src/mylib/MY_TIFF/: CMakeLists.txt  utilities.h
nmeth.3036-S2/src/nucleiChSvWshedPBC/: .watershedPersistanceAgglomeration.cpp.swp  CMakeLists.txt  bool.h  constants.h  graph.h  hierarchicalSegmentation.cpp  hierarchicalSegmentation.h  mainProcessStack.cpp  mainProcessStackBatchMulticore.cxx  mainTest.cpp  set_union.c  set_union.h  threadsMylib.h  watershedPersistanceAgglomeration.cpp  watershedPersistanceAgglomeration.h
nmeth.3036-S2/src/nucleiChSvWshedPBC/CUDAmedianFilter2D/: CMakeLists.txt  book.h  mainTest.cpp  medianFilter2D.cu  medianFilter2D.h
nmeth.3036-S2/src/temporalLogicalRules/: CMakeLists.txt  GaussianMixtureModel_Redux.cpp  GaussianMixtureModel_Redux.h  binaryTree.h  constants.hOldRemove  edgeTree.h  lineage.cpp  lineage.h  lineageHyperTree.cpp  lineageHyperTree.h  lineageWindowFeatures.cpp  lineageWindowFeatures.h  localGeometricDescriptor.cpp  localGeometricDescriptor.h  mainTest.cpp  nuclei.cpp  nuclei.h  supervoxel.cpp  supervoxel.h  temporalLogicalRules.cpp  temporalLogicalRules.h  trackletCalculation.cpp  trackletCalculation.h  utilsAmatf.h
nmeth.3036-S2/src/temporalLogicalRules/knnCUDA/: knnCuda.cu  knnCuda.h
nmeth.3036-S2/src/temporalLogicalRules/mylib/: fct.root.h  filters.p  histogram.h  mylib.h  water.shed.p
nmeth.3036-S2/src/temporalLogicalRules/mylib/DOCUMENTS/PPT/: Mylib.Powerpoint.ppt
nmeth.3036-S2/src/temporalLogicalRules/mylib/MY_FFT/: CMakeLists.txt  fft.F.h
nmeth.3036-S2/src/temporalLogicalRules/sparseHungarianAlgorithm/: CMakeLists.txt  mainTest.cxx  sparseHungarianAlgorithm.cpp  sparseHungarianAlgorithm.h
nmeth.3036-S2/src/temporalLogicalRules/sparseHungarianAlgorithm/cmake/: FindCPLEX.cmake
